	PR c++/18124 	* parser.c (cp_parser_type_parameter): Robustify.

PR c++/18155
	* parser.c (cp_parser_single_declaration): Disallow template
	typedefs.

	PR c++/18177
	* typeck.c (build_const_cast): Use error_operand_p.

	PR c++/18124
	* g++.dg/template/crash25.C: New test.

	PR c++/18155
	* g++.dg/template/typedef2.C: New test.
	* g++.dg/parse/crash13.C: Adjust error markers.

	PR c++/18177
	* g++.dg/conversion/const3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@90016 138bc75d-0d04-0410-961f-82ee72b054a4