gcc/testsuite/g++.dg/template/typedef2.C
@@ -1,0 +1,3 @@
+// PR c++/18155
+
+template<int> typedef struct A; // { dg-error "" }
